Alignment is not correct on "Security Verification" pop up when we click on "Key" icon on "Who needs to sign this document?" pop up under "Basic+" document

--- a/assets/css/rtl-admin.css
+++ b/assets/css/rtl-admin.css
@@ -1039,3 +1039,9 @@ span.deleteIcon{
 .form-inline .container-fluid .row{
     margin-right:0px;
 }
+.ui-dialog.ui-corner-all.ui-widget.ui-widget-content.ui-front.esig-access-dialog.ui-draggable.ui-resizable {
+    margin-right: 35% !important;
+}
+#submit_send_layer {
+    left: 25px;
+}
